remoção das setas do carrossel em "ofertas"

--- a/assets/css/ofertas.css
+++ b/assets/css/ofertas.css
@@ -77,4 +77,11 @@
 
 .carrossel::-webkit-scrollbar {
   display: none; 
+
+@media (max-width: 768px) {
+  .carrossel-nav {
+    display: none;
+  }
+}
+
 }
